# cos2_ridge_following

./: .gitignore  pyproject.toml  setupenv.sh
analytical_stuff/: brown_muller_derivatives.py
benchmark/: follower_benchmark.py  surface_benchmark.py
ridgefollowing/algorithms/: cosine_follower.py  gradient_extremal_follower.py  minimizer.py  modes.py  ncg.py  neb.py  ridgefollower.py  spherical_optimizer.py
ridgefollowing/plotting/: plot_surface.py
scripts/: plot_brown_muller.py  plot_lepsho.py  plot_lepshogauss.py  plot_ridge.py
scripts/misc/: plot_ridge.py
scripts/plot_surfaces/: plot_brown_muller.py  plot_leps.py  plot_lepsho.py  plot_lepshogauss.py  plot_peaks.py  plot_quadratic.py  plot_rknarr_brown_muller.py  plot_rknarr_lepsho.py
scripts/test_lepshogauss/: join_history.py  plot.py  plot_ring_samples.py  plot_surface.py  temp_plot.py  walk_dispatcher.py  walks.py
scripts/test_lepshogauss/.old/: plot_ring_samples.py
scripts/test_lepshogauss/data200/: meta.toml
scripts/test_lepshogauss/plot_anharmonic/: plot_anharmonic.py
scripts/test_lepshogauss/plot_grad_mode/: plot_grad_mode.py
scripts/test_lepshogauss/plots/: plot_c2.py  plot_energy.py  plot_evaldiff.py  plot_grad_ext_crit.py  plot_grad_ext_dist_1.py  plot_grad_ext_dist_2.py  plot_gradc2.py
scripts/test_quapp_examples/: example2.py  example3.py  example4.py
src/ridgefollowing/: energy_surface.py
src/ridgefollowing/algorithms/: cosine_follower.py  gradient_extremal_follower.py  minimizer.py  modes.py  ncg.py  ridgefollower.py  (+1 more)
test/: test_ncg.py  test_spherical_optimizer.py
(+18 files in other folders)
