[project]
name = "ridgefollowing"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ridgefollowing*", "ridgefollowing.*"]  # ["*"] by default
exclude = ["ridgefollowing.tests*"]  # empty by default
namespaces = false  # true by default