[project]
name = "ridgefollowing"
version = "0.0.1"
dependencies = [
    "pytest",
    "numpy",
    "numdifftools",
    "numba",
    "pydantic<2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["ridgefollowing*", "ridgefollowing.*"]  # ["*"] by default
exclude = ["ridgefollowing.tests*"]  # empty by default
namespaces = false  # true by default